--- a/ExamApp/Views/Shared/_Layout.cshtml
+++ b/ExamApp/Views/Shared/_Layout.cshtml
@@ -6,10 +6,50 @@
     <title>@ViewData["Title"] - ExamApp</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
 </head>
 <body>
     <header>
         
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+            <!-- Brand -->
+            <a class="navbar-brand" href="/">Home</a>
+
+            <!-- Links -->
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="/Exam/Create">Create Exam</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/Exam">Exams</a>
+                </li>
+                
+                
+            </ul>
+            <ul class="navbar-nav ml-auto">
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <!-- Dropdown -->
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                            @User.Identity.Name
+                        </a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="Account/Logout">LogOut</a>
+                        </div>
+                    </li>
+                }
+                else
+                {
+                    <li class="nav-item">
+                        <a class="nav-link" href="Account/Login">Login</a>
+                    </li>
+                }
+            </ul>
+        </nav>
     </header>
     <div class="container">
         <main class="container">
