--- a/ExamApp/Views/Shared/_Layout.cshtml
+++ b/ExamApp/Views/Shared/_Layout.cshtml
@@ -38,14 +38,14 @@
                             @User.Identity.Name
                         </a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="Account/Logout">LogOut</a>
+                            <a class="dropdown-item" href="/Account/Logout">LogOut</a>
                         </div>
                     </li>
                 }
                 else
                 {
                     <li class="nav-item">
-                        <a class="nav-link" href="Account/Login">Login</a>
+                        <a class="nav-link" href="/Account/Login">Login</a>
                     </li>
                 }
             </ul>
