--- a/ExamApp/Views/Shared/_Layout.cshtml
+++ b/ExamApp/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                 
                 
             </ul>
-            <ul class="navbar-nav ml-auto">
+            <ul class="navbar-nav ml-auto mr-4">
                 @if (User.Identity.IsAuthenticated)
                 {
                     <!-- Dropdown -->
