--- a/ExamApp/Views/Exam/Create.cshtml
+++ b/ExamApp/Views/Exam/Create.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Create Exam";
 }
-
+<div class="text-danger" asp-validation-summary="All"></div>
 <form>
     <div class="form-group">
         <label asp-for="Title" class="form-control">Yazı</label>
